<package>
  <name>novint_falcon</name>
  <version>1.0.0</version>
  <description>This package contains the components of the novint_falcon package</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>

  <license>Unknown</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Unknown Author</author>

  <build_depend>rtt</build_depend>
  <build_depend>orogen</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosnode</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_std_msgs</run_depend>
  <run_depend>rtt_geometry_msgs</run_depend>

<export>
  <rtt_ros>
    <plugin_depend>rtt_rosnode</plugin_depend>
    <plugin_depend>rtt_roscomm</plugin_depend>
    <plugin_depend>rtt_std_msgs</plugin_depend>
    <plugin_depend>rtt_geometry_msgs</plugin_depend>
  </rtt_ros>
</export>
</package>
